refined chat stream